Probada la parte gráfica de huéspedes al completo.

--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'org.iesalandalus.programacion.reservashotel'
-    mainClass = 'org.iesalandalus.programacion.reservashotel.ReservasHotel-v5'
+    mainModule = 'org.iesalandalus.programacion.reservashotel.vista.grafica'
+    mainClass = 'org.iesalandalus.programacion.reservashotel.ReservasHotel_v5'
 }
 
 javafx {
